--- a/html5/engulf.html
+++ b/html5/engulf.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h2>Engulf</h2>
+<p>
+<button onclick="if(window.started)window.started=2;" accesskey="r">Restart level</button>
+</p>
 <canvas id="game" width="480" height="360"></canvas>
 <div style="display:none">
 <img id="level01" src="level01.png" />
