Plain R as shortcut key

--- a/html5/engulf.html
+++ b/html5/engulf.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Engulf</h2>
 <p>
-<button onclick="if(window.started)window.started=2;" accesskey="r">Restart level</button>
+<button id="restart" accesskey="r"><u>R</u>estart level</button>
 </p>
 <canvas id="game" width="480" height="360"></canvas>
 <div style="display:none">
