Audio sprites instead of separate audio files

--- a/html5/engulf.html
+++ b/html5/engulf.html
@@ -70,12 +70,7 @@
 <img id="level57" src="level57.png" />
 <img id="level58" src="level58.png" />
 </div>
-<audio id="sfx001"><source src="sfx001.mp3" type="audio/mpeg" /></audio>
-<audio id="sfx002"><source src="sfx002.mp3" type="audio/mpeg" /></audio>
-<audio id="sfx003"><source src="sfx003.mp3" type="audio/mpeg" /></audio>
-<audio id="sfx006"><source src="sfx006.mp3" type="audio/mpeg" /></audio>
-<audio id="sfx007"><source src="sfx007.mp3" type="audio/mpeg" /></audio>
-<audio id="sfx013"><source src="sfx013.mp3" type="audio/mpeg" /></audio>
+<audio id="audiosprites"><source src="audiosprites.mp3" type="audio/mpeg" preload /></audio>
 <script type="text/javascript" src="engulf.js"></script>
 </body>
 </html>
