--- a/html5/engulf.html
+++ b/html5/engulf.html
@@ -5,12 +5,14 @@
 <link rel="stylesheet" type="text/css" href="engulf.css">
 </head>
 <body>
-<h2>Engulf</h2>
+<h2>ENGULF - a puzzle game</h2>
+<p>
+<canvas id="game" width="480" height="360"></canvas>
+</p>
 <p>
 <button id="restart" accesskey="r"><u>R</u>estart level</button>
 </p>
-<canvas id="game" width="480" height="360"></canvas>
-<div style="display:none">
+<div class="levels">
 <img id="level01" src="level01.png" />
 <img id="level02" src="level02.png" />
 <img id="level03" src="level03.png" />
