Show level number

--- a/html5/engulf.html
+++ b/html5/engulf.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h2>ENGULF - a puzzle game</h2>
+<p id="description">Click the title screen to start</p>
 <p>
 <canvas id="game" width="480" height="360"></canvas>
 </p>
