Button to delete savegame

--- a/html5/engulf.html
+++ b/html5/engulf.html
@@ -12,6 +12,7 @@
 </p>
 <p>
 <button id="restart" accesskey="r"><u>R</u>estart level</button>
+<button id="reset">Start from scratch</button>
 </p>
 <div class="levels">
 <img id="level01" src="level01.png" title="Level 1" />
