--- a/html5/engulf.html
+++ b/html5/engulf.html
@@ -15,64 +15,64 @@
 <button id="reset">Start from scratch</button>
 </p>
 <div class="levels">
-<img id="level01" src="level01.png" title="Level 1" />
-<img id="level02" src="level02.png" title="Level 2" />
-<img id="level03" src="level03.png" title="Level 3" />
-<img id="level04" src="level04.png" title="Level 4" />
-<img id="level05" src="level05.png" title="Level 5" />
-<img id="level06" src="level06.png" title="Level 6" />
-<img id="level07" src="level07.png" title="Level 7" />
-<img id="level08" src="level08.png" title="Level 8" />
-<img id="level09" src="level09.png" title="Level 9" />
-<img id="level10" src="level10.png" title="Level 10" />
-<img id="level11" src="level11.png" title="Level 11" />
-<img id="level12" src="level12.png" title="Level 12" />
-<img id="level13" src="level13.png" title="Level 13" />
-<img id="level14" src="level14.png" title="Level 14" />
-<img id="level15" src="level15.png" title="Level 15" />
-<img id="level16" src="level16.png" title="Level 16" />
-<img id="level17" src="level17.png" title="Level 17" />
-<img id="level18" src="level18.png" title="Level 18" />
-<img id="level19" src="level19.png" title="Level 19" />
-<img id="level20" src="level20.png" title="Level 20" />
-<img id="level21" src="level21.png" title="Level 21" />
-<img id="level22" src="level22.png" title="Level 22" />
-<img id="level23" src="level23.png" title="Level 23" />
-<img id="level24" src="level24.png" title="Level 24" />
-<img id="level25" src="level25.png" title="Level 25" />
-<img id="level26" src="level26.png" title="Level 26" />
-<img id="level27" src="level27.png" title="Level 27" />
-<img id="level28" src="level28.png" title="Level 28" />
-<img id="level29" src="level29.png" title="Level 29" />
-<img id="level30" src="level30.png" title="Level 30" />
-<img id="level31" src="level31.png" title="Level 31" />
-<img id="level32" src="level32.png" title="Level 32" />
-<img id="level33" src="level33.png" title="Level 33" />
-<img id="level34" src="level34.png" title="Level 34" />
-<img id="level35" src="level35.png" title="Level 35" />
-<img id="level36" src="level36.png" title="Level 36" />
-<img id="level37" src="level37.png" title="Level 37" />
-<img id="level38" src="level38.png" title="Level 38" />
-<img id="level39" src="level39.png" title="Level 39" />
-<img id="level40" src="level40.png" title="Level 40" />
-<img id="level41" src="level41.png" title="Level 41" />
-<img id="level42" src="level42.png" title="Level 42" />
-<img id="level43" src="level43.png" title="Level 43" />
-<img id="level44" src="level44.png" title="Level 44" />
-<img id="level45" src="level45.png" title="Level 45" />
-<img id="level46" src="level46.png" title="Level 46" />
-<img id="level47" src="level47.png" title="Level 47" />
-<img id="level48" src="level48.png" title="Level 48" />
-<img id="level49" src="level49.png" title="Level 49" />
-<img id="level50" src="level50.png" title="Level 50" />
-<img id="level51" src="level51.png" title="Level 51" />
-<img id="level52" src="level52.png" title="Level 52" />
-<img id="level53" src="level53.png" title="Level 53" />
-<img id="level54" src="level54.png" title="Level 54" />
-<img id="level55" src="level55.png" title="Level 55" />
-<img id="level56" src="level56.png" title="Level 56" />
-<img id="level57" src="level57.png" title="Level 57" />
-<img id="level58" src="level58.png" title="Level 58" />
+<img id="level01" src="level01.png" title="Level 1 - Welcome" />
+<img id="level02" src="level02.png" title="Level 2 - Engulfed" />
+<img id="level03" src="level03.png" title="Level 3 - Stay Clear" />
+<img id="level04" src="level04.png" title="Level 4 - Blocking" />
+<img id="level05" src="level05.png" title="Level 5 - Switch" />
+<img id="level06" src="level06.png" title="Level 6 - Three Mazes" />
+<img id="level07" src="level07.png" title="Level 7 - Restart" />
+<img id="level08" src="level08.png" title="Level 8 - Possible" />
+<img id="level09" src="level09.png" title="Level 9 - One Way" />
+<img id="level10" src="level10.png" title="Level 10 - Do Not Engulf" />
+<img id="level11" src="level11.png" title="Level 11 - Edge Case" />
+<img id="level12" src="level12.png" title="Level 12 - Step Back" />
+<img id="level13" src="level13.png" title="Level 13 - Avoid Engulf" />
+<img id="level14" src="level14.png" title="Level 14 - Find Engulf" />
+<img id="level15" src="level15.png" title="Level 15 - Bubbles and Spikes" />
+<img id="level16" src="level16.png" title="Level 16 - Zig Zag" />
+<img id="level17" src="level17.png" title="Level 17 - Cube" />
+<img id="level18" src="level18.png" title="Level 18 - Waves" />
+<img id="level19" src="level19.png" title="Level 19 - Peaks" />
+<img id="level20" src="level20.png" title="Level 20 - Museum" />
+<img id="level21" src="level21.png" title="Level 21 - Pie" />
+<img id="level22" src="level22.png" title="Level 22 - Links" />
+<img id="level23" src="level23.png" title="Level 23 - Gates" />
+<img id="level24" src="level24.png" title="Level 24 - Web" />
+<img id="level25" src="level25.png" title="Level 25 - Twenty-five" />
+<img id="level26" src="level26.png" title="Level 26 - Twelve Yards" />
+<img id="level27" src="level27.png" title="Level 27 - Messy" />
+<img id="level28" src="level28.png" title="Level 28 - Bars" />
+<img id="level29" src="level29.png" title="Level 29 - Hex" />
+<img id="level30" src="level30.png" title="Level 30 - Orbits" />
+<img id="level31" src="level31.png" title="Level 31 - Pills" />
+<img id="level32" src="level32.png" title="Level 32 - Woven" />
+<img id="level33" src="level33.png" title="Level 33 - Act 1" />
+<img id="level34" src="level34.png" title="Level 34 - Act 2" />
+<img id="level35" src="level35.png" title="Level 35 - Act 3" />
+<img id="level36" src="level36.png" title="Level 36 - Yellow" />
+<img id="level37" src="level37.png" title="Level 37 - Combination" />
+<img id="level38" src="level38.png" title="Level 38 - Touch" />
+<img id="level39" src="level39.png" title="Level 39 - Stay Clear Again" />
+<img id="level40" src="level40.png" title="Level 40 - Crowded" />
+<img id="level41" src="level41.png" title="Level 41 - Road" />
+<img id="level42" src="level42.png" title="Level 42 - Curtains" />
+<img id="level43" src="level43.png" title="Level 43 - Radiant" />
+<img id="level44" src="level44.png" title="Level 44 - Wires" />
+<img id="level45" src="level45.png" title="Level 45 - EEI" />
+<img id="level46" src="level46.png" title="Level 46 - Julie" />
+<img id="level47" src="level47.png" title="Level 47 - Plot" />
+<img id="level48" src="level48.png" title="Level 48 - Checkered" />
+<img id="level49" src="level49.png" title="Level 49 - Rings" />
+<img id="level50" src="level50.png" title="Level 50 - Smile" />
+<img id="level51" src="level51.png" title="Level 51 - Gems" />
+<img id="level52" src="level52.png" title="Level 52 - Mikado" />
+<img id="level53" src="level53.png" title="Level 53 - Connected" />
+<img id="level54" src="level54.png" title="Level 54 - Logs" />
+<img id="level55" src="level55.png" title="Level 55 - Pegs and Holes" />
+<img id="level56" src="level56.png" title="Level 56 - Love" />
+<img id="level57" src="level57.png" title="Level 57 - Congrats" />
+<img id="level58" src="level58.png" title="Level 58 - Finish" />
 </div>
 <audio id="audiosprites"><source src="audiosprites.mp3" type="audio/mpeg" preload /></audio>
 <script type="text/javascript" src="engulf.js"></script>
